[package]
name = "untitled"
version = "0.1.0"
authors = ["djdis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.9"

[dependencies.gtk]
version = "0.9"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
